--- a/src/layout/Dashboard/Dashboard.module.css
+++ b/src/layout/Dashboard/Dashboard.module.css
@@ -12,6 +12,10 @@
   z-index: 1;
 }
 
+.innerCard{
+  margin-right: 10px;
+}
+
 .sider {
   position: fixed;
   background-color: white;
@@ -91,7 +95,7 @@
 }
 
 .navItemSeleted {
-  /* padding: 0; */
+  /* /* padding: 0;  */
   width: 100% !important;
   background-color: #e6f6ff;
   border-right: 3px solid #2090ff;
